:bug: hover btn vw index

--- a/public/style.css
+++ b/public/style.css
@@ -12,7 +12,281 @@ html, body {
     background-color: #F8F8F8;
     border-radius: 4px;
 }
+.intern-card:hover {
+    background-color:#2670E8;
+    color: #F8F8F8;
+}
 .child-box{
+    width: 100%;
+    align-content: center;
+    text-align:center;
+}
+.child-h1{
+    font-family: 'Rawline', sans-serif;
+    font-size: 18px;
+    color: #0C326F;
+}
+.parent-box {
+    display: flex;
+    justify-content: space-between;
+}
+.inline{
+    display: inline;
+}
+.mini-box{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #EDEDED;
+    width: 38px;
+    height: 38px;
+    font-size: 28px;
+
+}
+.size-h1{
+    display: inline-flex;
+    width: 105px;
+}
+
+/*Filter*/
+    .dropdown-menu{
+        display: none;
+    }
+    .custom-dropdown:hover{
+        background-color: #2670E8;
+        color: #F8F8F8;
+    }
+    .custom-dropdown:hover .dropdown-menu{
+        display: flex;
+    }
+    .col-sm-2.col-lg-1.btn:hover .material-symbols-outlined.light-blue {
+        color: #F8F8F8;
+    }
+    .dropdown-menu .dropdown-item:hover{
+        background-color: #2670E8;
+        color: #F8F8F8;
+    }
+    .custom-filter{
+        height: 52px;
+        background-color: #EDEDED;
+        border: none;
+    }
+    .no-outline:focus{
+        outline: none;
+        box-shadow: none;
+
+    }
+    .rounded-input-left {
+        border-top-left-radius: 6px;
+        border-bottom-left-radius: 6px;
+    }
+    .rounded-button-left {
+        border-top-right-radius: 6px;
+        border-bottom-right-radius: 6px;
+    }
+    .rounded-button-left {
+        border-top-right-radius: 6px;
+        border-bottom-right-radius: 6px;
+    }
+    .rounded-input-left {
+        border-top-left-radius: 6px;
+        border-bottom-left-radius: 6px;
+    }
+    .rounded-button-right{
+        border-top-right-radius: 6px;
+        border-bottom-right-radius: 6px;
+        border-top-left-radius: 0;
+        border-bottom-left-radius: 0;
+    }
+    .row input{
+        width: 100%;
+    }
+    .custom-dropdown{
+        display: flex;
+    }
+/* CUSTOM MARGINS PADDINGS */
+
+/* XX-Large devices (larger desktops, 1400px and up)*/
+    @media (min-width: 576px){
+        .custom-m{
+            margin-left: 54px;
+            margin-right: 55px;
+        }
+    }
+    @media (min-width: 768px){
+        .custom-m{
+            margin-left: 44px;
+            margin-right: 46px;
+        }
+    }
+    @media (min-width: 992px){
+        .custom-m{
+            margin-left: 22px;
+            margin-right: 26px;
+        }
+    }
+    @media (min-width: 1200px){
+        .custom-m{
+            margin-left: 46px;
+            margin-right: 48px;
+        }
+    }
+    @media (min-width: 1400px){
+        .custom-m{
+            margin-left: 76px;
+            margin-right: 76px;
+        }
+    }
+
+    .m-top{
+        margin-top: 40px;
+    }
+
+    .p-bottom{
+        padding-bottom: 177px;
+    }
+    .m-box{
+        margin: 30px;
+    }
+    .mb-row-sup{
+        margin-top: 300px;
+    }
+    .mt-cont{
+        margin-top: 30px;
+    }
+
+    .bg-teste{
+        background-color:#FFD000;
+    }
+    /*.full-size-link {*/
+        /*display: flex;*/
+        /*align-items: center;*/
+        /*justify-content: center;*/
+        /*width: 100%;*/
+        /*height: 100%;*/
+        /*text-decoration: none;*/
+        /*color: inherit;*/
+        /*top: 0;*/
+        /*left: 0;*/
+      /*}*/
+
+
+
+/* TEMPLATE*/
+
+    /* background-colors */
+    .bg-blue{
+        background-color: #1B77BC;
+    }
+    .bg-light-gray{
+        background-color:#EDEDED;
+    }
+    .custom-bg{
+        height: 100%;
+        background-repeat: repeat;
+        background-attachment: scroll;
+        background-size: contain;
+        background-position: center center;
+        overflow: hidden;
+        margin: 0;
+        padding: 0;
+        padding-bottom: 50px;
+        margin-bottom:-32px;
+    }
+
+
+
+    /* font-colors */
+    .light-blue{
+        color: #2670E8;
+    }
+    .deep-gray{
+        color: #333333;
+    }
+    .gray{
+        color:#636363;
+    }
+    .yellow{
+        color:#FFD000;
+    }
+    .red{
+        color:#E61C22;
+    }
+    .card-row{
+        height: 294px;
+        background-color:  #0C326F;
+    }
+
+
+    /* STYLE */
+        .font-rawline {
+            font-family: 'Rawline', sans-serif;
+        }
+
+
+    /* SIZE */
+        .small{
+            font-size: 18px;
+        }
+        .medium{
+            font-size: 28px;
+        }
+        .large{
+            font-size: 50px;
+        }
+        h1{
+            margin-bottom: 0;
+        }
+
+/* ICON */
+        .icon-menu{
+            width: 28px;
+            height: 28px;
+            background-image: url(icon/icone-menu.png);
+            background-repeat: no-repeat;
+        }
+        .icon-arrow{
+            width: 24px;
+            height: 24px;
+            background-image: url(icon/arrow-down-2-bold.png);
+/* SIZE */
+
+    @media (min-width: 1400px) {
+            .bg-image {
+                height: 100%;
+                background-image: url('images/dnit.jpg');
+                background-repeat: repeat;
+                background-attachment: scroll;
+                background-size: contain;
+                background-position: center center;
+                overflow: hidden;
+                margin: 0;
+                padding: 0;
+                padding-bottom: 50px;
+                margin-bottom:-32px;
+            }
+    }
+
+/* animation */
+.blink {
+    animation: blink-animation 1s steps(5, start) infinite;
+    -webkit-animation: blink-animation 1s steps(5, start) infinite;
+  }
+  @keyframes blink-animation {
+    to {
+      visibility: hidden;
+    }
+  }
+
+  @-webkit-keyframes blink-animation {
+    to {
+      visibility: hidden;
+    }
+  }
+  .red-background {
+    background-color: red;
+  }
+  .child-box{
     width: 100%;
     align-content: center;
     text-align:center;
@@ -286,17 +560,13 @@ html, body {
       visibility: hidden;
     }
   }
-
   .red-background {
     background-color: red;
   }
 
-  .card {
-    background-color: #F8F8F8;
+  /*button*/
+  .btn{
+      display:flex;
+      text-align:center;
+      align-items:center;
   }
-  .card:hover {
-    background-color: #DBE8FB; /* Adiciona uma sombra */
-    cursor: pointer;
-  }
-
-
