--- a/public/style.css
+++ b/public/style.css
@@ -12,8 +12,10 @@ html, body {
     background-color: #F8F8F8;
     border-radius: 4px;
 }
-.intern-card:hover {
+.intern-card-hover:hover{
     background-color:#2670E8;
+}
+.intern-card-hover:hover h1 {
     color: #F8F8F8;
 }
 .child-box{
@@ -158,17 +160,6 @@ html, body {
     .bg-teste{
         background-color:#FFD000;
     }
-    /*.full-size-link {*/
-        /*display: flex;*/
-        /*align-items: center;*/
-        /*justify-content: center;*/
-        /*width: 100%;*/
-        /*height: 100%;*/
-        /*text-decoration: none;*/
-        /*color: inherit;*/
-        /*top: 0;*/
-        /*left: 0;*/
-      /*}*/
 
 
 
@@ -236,6 +227,7 @@ html, body {
         }
         h1{
             margin-bottom: 0;
+            color: #333333;
         }
 
 /* ICON */
@@ -429,17 +421,17 @@ html, body {
     .bg-teste{
         background-color:#FFD000;
     }
-    .full-size-link {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-        height: 100%;
-        text-decoration: none;
-        color: inherit;
-        top: 0;
-        left: 0;
-      }
+    /*.full-size-link {*/
+        /*display: flex;*/
+        /*align-items: center;*/
+        /*justify-content: center;*/
+        /*width: 100%;*/
+        /*height: 100%;*/
+        /*text-decoration: none;*/
+        /*color: inherit;*/
+        /*top: 0;*/
+        /*left: 0;*/
+      /*}*/
 
 
 
