--- a/public/style.css
+++ b/public/style.css
@@ -7,7 +7,8 @@ html, body {
 .intern-card{
     display: flex;
     width: 256px;
-    height: 200px;
+    height: 126px;
+    align-content:center;
     padding: 0%;
     background-color: #F8F8F8;
     border-radius: 4px;
@@ -108,9 +109,9 @@ html, body {
     }
      .custom-bg{
         height: 100%;
-        background-repeat: repeat;
+        background-repeat: no-repeat;
         background-attachment: scroll;
-        background-size: contain;
+        background-size: cover;
         background-position: center center;
         overflow: hidden;
         margin: 0;
@@ -118,23 +119,20 @@ html, body {
         padding-bottom: 50px;
         margin-bottom:-32px;
     }
-
-
-/* XX-Large devices (larger desktops, 1400px and up)*/
-    @media (min-width: 576px){
         .custom-m{
             margin-left: 54px;
             margin-right: 55px;
         }
-        .mb-row-sup{
-            margin-top: 20px;
+        .mt-row-inf{
+            margin-top: 184px;
         }
         .card-row{
-        display:flex;
-        flex-direction:column;
-        flex-wrap: nowrap;
+            display:flex;
+            height: 185px;
+            background-color: #0C326F;
+            justify-content:space-around;
+            flex-wrap: nowrap;
         }
-    }
     @media (min-width: 768px){
         .custom-m{
             margin-left: 44px;
@@ -146,27 +144,34 @@ html, body {
             margin-left: 22px;
             margin-right: 26px;
         }
-        .mb-row-sup{
-            margin-top: 183px;
-        }
-        .card-row{
-            flex-direction:row;
-            height: 294px;
-            background-color:  #0C326F;
+        .mt-row-inf{
+            margin-top: 200px;
         }
         .custom-bg {
-            background-size: cover;
+            background-size: contain;
+            background-repeat:repeat;
         }
     }
     @media (min-width: 1200px){
-        .custom-bg{
-            background-size: contain;
+            .mt-row-inf{
+                margin-top: 150px;
+        }
+            .card-row{
+                justify-content: center;
+        }
+            .intern-card{
+            height:126px;
+        }
+    }
+    @media (min-width: 1200px){
+       /* .custom-bg{*/
+            /*background-size: contain;*/
+        /*}*/
+            .mt-row-inf{
+            margin-top: 216px;
         }
     }
     @media (min-width: 1400px){
-        .mb-row-sup{
-            margin-top: 205px;
-        }
     }
 /* TEMPLATE*/
 
