--- a/public/style.css
+++ b/public/style.css
@@ -6,8 +6,14 @@ html, body {
     overflow:hidden;
 }
 .container-fluid{
-    padding:0;
-    margin:0;
+    padding: 0 42px 0 42px;
+}
+th{
+    text-align:center;
+    white-space:nowrap;
+}
+.table thead th{
+    vertical-align:middle;
 }
 .intern-card{
     display: flex;
@@ -36,9 +42,8 @@ html, body {
     font-weight:400;
 }
 .table .custom-h1{
-    font-size: 14px;
-    color: #333333;
-    font-weight:300;
+    font-size: 18px;
+    color: #555555;
 }
 a h1.custom-h1{
     font-size:16px;
@@ -93,9 +98,6 @@ a h1.custom-h1{
         outline: none;
         box-shadow: none;
     }
-    .m-input{
-        margin:20px 0 20px 0;
-    }
     .rounded-input-left {
         border-top-left-radius: 6px;
         border-bottom-left-radius: 6px;
@@ -112,25 +114,14 @@ a h1.custom-h1{
     .custom-dropdown{
         display: flex;
     }
-/*     .custom-bg{*/
-        /*height: 100%;*/
-        /*background-repeat: no-repeat;*/
-        /*background-attachment: scroll;*/
-        /*background-size: cover;*/
-        /*background-position: center center;*/
-        /*overflow: hidden;*/
-        /*margin: 0;*/
-        /*padding: 0;*/
-        /*padding-bottom: 50px;*/
-        /*margin-bottom:-32px;*/
-    /*}*/
         .card-row{
             display:flex;
+            width:100%;
             height: 182px;
             background-color: #0C326F;
             justify-content:space-around;
             flex-wrap: nowrap;
-            margin: 0 0 84px 0;
+            margin-bottom:84px;
         }
 
     @media (min-width: 768px){
@@ -138,21 +129,25 @@ a h1.custom-h1{
             justify-content:end;
         }
         .custom-m{
-            margin:0 46px 0 44px;
+            margin:15px 0 15px 0;
         }
         .custom-bg{
             background-size:cover;
             background-position:center;
             background-repeat:no-repeat;
         }
+        .m-input{
+            margin-bottom:6px;
+            padding-top:52px;
+            margin-left: 0;
+            margin-right:0;
+        }
     }
     @media (min-width: 992px){
         .card-row{
             justify-content:center;
         }
-        .custom-m{
-            margin:15px 0 15px 0;
-        }
+
     }
     @media (min-width: 1200px){
         .custom-bg{
@@ -168,10 +163,6 @@ a h1.custom-h1{
         }
     }
     @media (min-width: 1200px){
-            ./*card-row{*/
-            ./*card-row{*/
-                /*margin-top:84px;*/
-        /*}*/
             .intern-card{
             height:126px;
         }
@@ -189,21 +180,6 @@ a h1.custom-h1{
     .bg-light-gray{
         background-color:#EDEDED;
     }
-/*    .custom-bg{*/
-        /*height: 100%;*/
-        /*background-repeat: repeat;*/
-        /*background-attachment: scroll;*/
-        /*background-size: contain;*/
-        /*background-position: center center;*/
-        /*overflow: hidden;*/
-        /*margin: 0;*/
-        /*padding: 0;*/
-        /*padding-bottom: 50px;*/
-        /*margin-bottom:-32px;*/
-    /*}*/
-
-
-
     /* font-colors */
     .light-blue{
         color: #2670E8;
@@ -224,22 +200,8 @@ a h1.custom-h1{
         .font-rawline {
             font-family: 'Rawline', sans-serif;
         }
-   /* SIZE */
-        /*.small{*/
-            /*font-size: 18px;*/
-        /*}*/
-        /*.medium{*/
-            /*font-size: 28px;*/
-        /*}*/
-        /*.large{*/
-            /*font-size: 50px;*/
-        /*}*/
-/*        h1{*/
-            /*margin-bottom: 0;*/
-            /*color: #333333;*/
-       /* }*/
-
 /* ICON */
+        /*header*/
         .icon-menu{
             width: 28px;
             height: 28px;
@@ -251,9 +213,6 @@ a h1.custom-h1{
             height: 24px;
             background-image: url(icon/arrow-down-2-bold.png);
         }
-/*        .arrow-down{*/
-
-        /*}*/
 /* animation */
 .blink {
     animation: blink-animation 1s steps(5, start) infinite;
